@@ -1,0 +1,6 @@
+var = 1
+
+def function():
+    export = 2
+    return export
+
