@@ -1,0 +1,6 @@
+list = 1
+
+def dict():
+    tuple = (1,2)
+    return tuple
+
